--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,20 @@
     "start_url": ".",
     "background_color": "#ffffff",
     "theme_color": "#ffffff",
-    "display": "standalone"
+    "display": "standalone",
+    "icons": [
+    {
+        "src": "/icon192.png",
+        "type": "image/png",
+        "sizes": "192x192"
+    },
+
+    {
+        "src": "/icon512.png",
+        "type": "image/png",
+        "sizes": "512x512"
+    }
+
+
+    ]
 }
