--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,13 @@
     "display": "standalone",
     "icons": [
     {
-        "src": "/icon192.png",
+        "src": "icon192.png",
         "type": "image/png",
         "sizes": "192x192"
     },
 
     {
-        "src": "/icon512.png",
+        "src": "icon512.png",
         "type": "image/png",
         "sizes": "512x512"
     }
