--- a/manifest.json
+++ b/manifest.json
@@ -7,17 +7,15 @@
     "display": "standalone",
     "icons": [
     {
-        "src": "icon192.png",
+        "src": "icons-192.png",
         "type": "image/png",
         "sizes": "192x192"
     },
 
     {
-        "src": "icon512.png",
+        "src": "icons-512.png",
         "type": "image/png",
         "sizes": "512x512"
     }
-
-
-    ]
+  ]
 }
