--- a/manifest.json
+++ b/manifest.json
@@ -10,14 +10,21 @@
         "src": "icons-192.png",
         "type": "image/png",
         "sizes": "192x192",
-        "purpose": "any maskable"
+        "purpose": "any"
     },
 
     {
         "src": "icons-512.png",
         "type": "image/png",
         "sizes": "512x512",
-        "purpose": "any maskable"
-    }
+        "purpose": "any"
+    },
+
+    {
+        "src": "maskable_icon.png",
+        "sizes": "196x196",
+        "type": "image/png",
+        "purpose": "maskable" 
+      }
   ]
 }
