--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Rock! Paper! Scissors!",
     "short_name": "RPS!",
-    "start_url": ".",
+    "start_url": "index.html",
     "background_color": "#317EFB",
     "theme_color": "#317EFB",
     "display": "standalone",
